...
  }

  const content = isPortrait ? (
    <>
      <View style={styles.imagePortraitContainer}>{renderDishDetailImage()}</View>
      <IconButton
        testID="refreshDishBtn"
        accessibilityHint={translate("dishDetailScreen:refreshDishHint")}
        onPress={refreshDish}
        disabled={loading || isRefreshing}
        style={styles.refreshPortraitButton}
      >
        <AnimatedRefreshIcon loading={isRefreshing} />
...
